# hmenu

./: .gitignore  .travis.yml  LICENSE  README.md  hmenu.cabal  stack.yaml  travis_long
src/: Main.hs  Prelude.hs
src/Application/: FreeDesktop.hs  Search.hs  Types.hs
src/Application/FreeDesktop/: Parser.hs  Types.hs
src/Data/: BinaryRef.hs  Locale.hs
src/HMenu/: Cache.hs  Command.hs  Executor.hs  FreeDesktop.hs  GUI.hs  Path.hs  Provider.hs  ScanDirs.hs  Search.hs  Types.hs  Xdg.hs
src/HMenu/FreeDesktop/: Parser.hs  Types.hs
src/HMenu/Provider/: Path.hs  Types.hs  XDG.hs  Xdg.hs
src/XDG/: DesktopEntry.hs  Directories.hs
src/XDG/DesktopEntry/: Analyser.hs  Parser.hs  Types.hs
src/Xdg/: DesktopEntry.hs  Directories.hs  Parser.hs  Types.hs
src/Xdg/DesktopEntry/: Analyser.hs  Parser.hs  Types.hs
