name:                hmenu
version:             0.1.0.0
synopsis:            Hacking with Haskell
description:         Please see README.md
homepage:            https://github.com/Adirelle/hmenu#readme
license:             BSD3
license-file:        LICENSE
author:              Adirelle
maintainer:          adirelle@gmail.com
copyright:           2016 Adirelle
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable hmenu
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base       >= 4.7   && < 5,
                       text       >= 1.2   && < 2,
                       time       >= 1.5   && < 2,
                       containers >= 0.5   && < 0.6,
                       bytestring >= 0.10  && < 0.11,
                       attoparsec >= 0.13  && < 0.14,
                       directory  >= 1.2.3 && < 2,
                       filepath   >= 1.4   && < 2
