name:                hmenu
version:             0.1.0.0
synopsis:            Hacking with Haskell
description:         Please see README.md
homepage:            https://github.com/Adirelle/hmenu#readme
license:             BSD3
license-file:        LICENSE
author:              Adirelle
maintainer:          adirelle@gmail.com
copyright:           2016 Adirelle
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable hmenu
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Data.Locale,
                       Data.BinaryRef,
                       HMenu.Provider.Path,
                       HMenu.Provider.Xdg,
                       HMenu.ScanDirs,
                       HMenu.Search,
                       HMenu.Types,
                       HMenu.GUI,
                       Xdg.Directories,
                       Xdg.Parser,
                       Xdg.Types
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
  build-depends:       base           == 4.8.*,
                       classy-prelude >= 0.12.7 && < 0.13,
                       text           >= 1.2    && < 2,
                       time           >= 1.5    && < 2,
                       containers     >= 0.5    && < 0.6,
                       bytestring     >= 0.10   && < 0.11,
                       attoparsec     >= 0.13   && < 0.14,
                       directory      >= 1.2    && < 2,
                       filepath       >= 1.4    && < 2,
                       mtl            >= 2.2    && < 3,
                       split          >= 0.2    && < 0.3,
                       gtk3           >= 0.14   && < 0.15,
                       deepseq        >= 1.4    && < 2,
                       unix           >= 2.7    && < 3,
                       transformers   >= 0.4    && < 0.5,
                       binary         >= 0.7.5  && < 0.8,
                       monad-loops    >= 0.4.3  && < 0.5,
                       hashable       >= 1.2.4  && < 1.3,
                       async          >= 2.1    && < 3,
                       unordered-containers

source-repository head
  type:     git
  location: https://github.com/Adirelle/hmenu.git
